src/main/webapp/css/admin/imcms-admin_panel.css
/* ... */
.imcms-panel__item--edit {
    background-image: url("/images_new/admin_panel/icon_edit.png");
}

.imcms-panel__item--public {
    background-image: url("/images_new/admin_panel/icon_public.png");
}

.imcms-admin-panel__item:last-of-type {
    margin-right: 0;
    width: 65%;
}

.imcms-panel__item--settings:hover {
    background-image: url("/images_new/admin_panel/icon_settings_active.png");
}

.imcms-panel__item--admin:hover {
    background-image: url("/images_new/admin_panel/icon_admin_active.png");
}

.imcms-panel__item--document:hover {
    background-image: url("/images_new/admin_panel/icon_doc_active.png");
}

.imcms-panel__item--page-info:hover {
    background-image: url("/images_new/admin_panel/icon_pageinfo_active.png");
}

.imcms-panel__item--publish-of:hover {
    background-image: url("/images_new/admin_panel/icon_publish_active.png");
}

.imcms-panel__item--preview:hover {
    background-image: url("/images_new/admin_panel/icon_preview_active.png");
}

.imcms-panel__item--edit:hover {
    background-image: url("/images_new/admin_panel/icon_edit_active.png");
}

.imcms-panel__item--public:hover {
    background-image: url("/images_new/admin_panel/icon_public_active.png");
}

/* small panel mode */

.imcms-admin-panel--small .imcms-admin-panel__item:first-of-type,
.imcms-admin-panel--small .imcms-admin-panel__item:nth-of-type(2) {
    max-height: 30px;
}

.imcms-admin-panel--small .imcms-admin-panel__item:nth-of-type(3) {
    padding-top: 5px;
}

.imcms-admin-panel--small .imcms-admin-panel__item:first-of-type {
    top: -2px;
    max-width: 50px;
}

.imcms-admin-panel--small .imcms-admin-panel__title {
    padding-top: 5px;
    line-height: 15px;
}

.imcms-admin-panel--small .imcms-admin-panel__meta {
    padding-top: 5px;
    line-height: 15px;
}

.imcms-admin-panel--small .imcms-panel__item {
    text-indent: -15000px;
    background-position-y: 5px;
    padding-top: 0;
}

.imcms-admin-panel--small .imcms-panel__item,
.imcms-admin-panel--small .imcms-admin-panel__item,
.imcms-admin-panel--small .imcms-admin-panel__item .imcms-flag {
    margin-top: 0;
    margin-bottom: 0;
}

.imcms-admin-panel--small .imcms-panel__item.imcms-panel__item--has-newer-version:before,
.imcms-admin-panel--small .imcms-panel__item.imcms-panel__item--has-newer-version:hover:before,
.imcms-admin-panel--small .imcms-panel__item--active:before,
.imcms-admin-panel--small .imcms-panel__item:hover:before {
    bottom: 0;
}

.imcms-admin-panel--small .imcms-panel__item--publish-of:after,
.imcms-admin-panel--small .imcms-panel__item--page-info:after,
.imcms-admin-panel--small .imcms-panel__item--document:after,
.imcms-admin-panel--small .imcms-panel__item--specific:after,
.imcms-admin-panel--small .imcms-panel__item--admin:after {
    height: 35px;
    top: -5px;
}

.imcms-admin-panel--small .imcms-admin-panel__item {
    max-height: 30px;
}

.imcms-admin-panel.imcms-admin-panel--small {
    min-height: 35px;
    max-height: 40px;
    padding-top: 5px;
}

.imcms-admin-panel--small .imcms-panel__item--logout button {
    margin-top: 0;
    padding-top: 6px;
    padding-bottom: 6px;
}

/* panel "visible" */

.imcms-panel-visible {
    position: sticky;
}

.imcms-panel-visible .imcms-admin-panel {
    position: relative;
}

/* "show panel" button */

#imcms-switch-panel-visibility-button {
    position: absolute;
    height: 15px;
    z-index: 10000;
    display: none;
}

#imcms-switch-panel-visibility-button.imcms-button--up {
    top: 80px;
    height: 40px;
    left: 10px;
    opacity: 0.7;
}

#imcms-switch-panel-visibility-button.imcms-button--up:hover {
    opacity: 1;
}

.imcms-admin-panel--small #imcms-switch-panel-visibility-button.imcms-button--up {
    top: 25px;
}

.imcms-admin-panel--small #imcms-switch-panel-visibility-button.imcms-button--locked {
    top: 20px;
}

#imcms-switch-panel-visibility-button.imcms-button--locked {
    top: 75px;
    opacity: 0.4;
    background-position-y: 15px;
    background-size: 14px;
    width: 21px;
    height: 21px;
    left: 10px;
}

#imcms-switch-panel-visibility-button.imcms-button--locked:hover {
    opacity: 0.7;
    background-repeat: no-repeat;
    background-position-x: center;
    background-image: url("/images_new/admin_panel/icon_unlocked.png");
    background-color: #0b94d8;
}

/* media */

@media screen and (max-width: 1800px) {
    .imcms-admin-panel {
        min-height: 69px;
    }

    #imcms-switch-panel-visibility-button.imcms-button--up {
        top: 55px;
    }

    #imcms-switch-panel-visibility-button.imcms-button--locked {
        top: 54px;
    }

    .imcms-panel__item--publish-of:after,
    .imcms-panel__item--page-info:after,
    .imcms-panel__item--document:after,
    .imcms-panel__item--specific:after,
    .imcms-panel__item--admin:after {
        max-height: 69px;
    }

    .imcms-admin-panel__item {
        height: 35px;
        margin-right: 17px;
    }

    .imcms-admin-panel__logo {
        width: 69px;
    }

    .imcms-admin-panel__title {
        line-height: 35px;
    }

    .imcms-admin-panel__meta {
        line-height: 35px;
    }

    .imcms-admin-panel .imcms-flags {
        margin-right: 0;
    }

    .imcms-admin-panel__item .imcms-flag {
        margin: 10px 35px 0 0;
    }
}

@media screen and (max-width: 1800px) {
    .imcms-panel__items {
        min-width: 0;
    }

    .imcms-panel__item {
        background-position: 50% 0;
        background-size: 15px;
        padding-top: 23px;
        min-width: 80px;
    }

    .imcms-panel__item--logout {
        width: 100px;
        padding-top: 0;
    }

    .imcms-admin-panel__item:last-of-type {
        width: 55%;
    }

    .imcms-panel__item--logout button {
        margin: 0 0 0 5px;
        padding: 10px 20px;
    }
}

@media screen and (max-width: 1800px) {
    .imcms-panel__item {
        font-size: 10px;
        min-width: 60px;
    }

    .imcms-panel__item--settings {
        min-width: 25px;
        background-position-y: 0;
    }
}
/* ... */

